First Prototype of the App. Still needs testing and improvement.