@@ -5,47 +5,39 @@ import com.iesvegademijas.serverSideSocialFlavours.models.entities.Step;
 import com.iesvegademijas.serverSideSocialFlavours.models.recipeRelated.Recipe;
 import com.iesvegademijas.serverSideSocialFlavours.dto.RecipeDTO;
 import com.iesvegademijas.serverSideSocialFlavours.models.social.User;
+import com.iesvegademijas.serverSideSocialFlavours.repository.entities.IngredientRepository;
+import com.iesvegademijas.serverSideSocialFlavours.repository.entities.StepRepository;
 import com.iesvegademijas.serverSideSocialFlavours.repository.recipeRelated.RecipeRepository;
 import com.iesvegademijas.serverSideSocialFlavours.repository.social.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.text.ParseException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/recipeapi")
 public class RecipeController {
     private final RecipeRepository recipeRepository;
     private final UserRepository userRepository;
+    private final IngredientRepository ingredientRepository;
+    private final StepRepository stepRepository;
 
     @Autowired
-    public RecipeController(RecipeRepository recipeRepository, UserRepository userRepository) {
+    public RecipeController(RecipeRepository recipeRepository, UserRepository userRepository, IngredientRepository ingredientRepository, StepRepository stepRepository) {
         this.recipeRepository = recipeRepository;
         this.userRepository = userRepository;
+        this.ingredientRepository = ingredientRepository;
+        this.stepRepository = stepRepository;
     }
 
     @GetMapping(path = "/getAllRecipesFromUser{id}")
     public ResponseEntity<List<Recipe>> getAllRecipesFromUser(@PathVariable Long id) {
-        Optional<User> user = userRepository.findById(id);
-
-        if (user.isPresent()) {
-            List<Recipe> result = new ArrayList<>();
-
-            Iterable<Recipe> recipes = user.get().getRecipes();
-
-            for (Recipe recipe : recipes) {
-                result.add(recipe);
-            }
-
-            return ResponseEntity.ok(result);
-        }
-        else
-        {
-            return ResponseEntity.notFound().build();
-        }
+        return ResponseEntity.ok(recipeRepository.findRecipesByUserId(id));
     }
 
     @DeleteMapping(path = "/deleteRecipe{id}")
@@ -64,7 +56,7 @@ public class RecipeController {
     }
 
     @PostMapping("/createRecipe")
-    public ResponseEntity<Object> createRecipe(@RequestBody RecipeDTO recipeDTO) {
+    public ResponseEntity<Long> createRecipe(@RequestBody RecipeDTO recipeDTO) {
         Optional<User> user = userRepository.findById(recipeDTO.getUserId());
 
         if (user.isPresent()) {
@@ -77,26 +69,30 @@ public class RecipeController {
             recipe.setImagePath(recipeDTO.getImagePath());
             recipe.setPreparationTime(recipeDTO.getPreparationTime());
             recipe.setTag(recipeDTO.getTag());
-            try {
-                recipe.setCreationDate(recipeDTO.getDate());
-            } catch (ParseException e) {
-                recipe.setCreationDate(new Date());
-            }
 
-            // Convert ingredients and steps from DTO to Ingredient and Step objects
+            // Convert ingredients from DTO to Ingredient entities and associate them with the recipe
             List<Ingredient> ingredients = recipeDTO.getIngredients().stream()
-                    .map(Ingredient::new)
-                    .toList();
-            recipe.setIngredients(new HashSet<>(ingredients));
+                    .map(ingredientName -> {
+                        Ingredient ingredient = new Ingredient(ingredientName);
+                        ingredient.setRecipe(recipe);
+                        return ingredient;
+                    })
+                    .collect(Collectors.toList());
+            recipe.setIngredients(ingredients);
 
+            // Convert steps from DTO to Step entities and associate them with the recipe
             List<Step> steps = recipeDTO.getSteps().stream()
-                    .map(Step::new)
-                    .toList();
-            recipe.setSteps(new HashSet<>(steps));
+                    .map(stepDescription -> {
+                        Step step = new Step(stepDescription);
+                        step.setRecipe(recipe);
+                        return step;
+                    })
+                    .collect(Collectors.toList());
+            recipe.setSteps(steps);
 
             // Save the recipe
             Recipe savedRecipe = recipeRepository.save(recipe);
-            return new ResponseEntity<>(savedRecipe, HttpStatus.CREATED);
+            return new ResponseEntity<>(savedRecipe.getId_recipe(), HttpStatus.CREATED);
         }
         else
         {
@@ -106,24 +102,23 @@ public class RecipeController {
 
     @GetMapping("/getAllRecipesFromUserFriends{idUser}")
     public ResponseEntity<List<Recipe>> getAllRecipesFromUserFriends(@PathVariable Long idUser) {
-        Optional<User> user = userRepository.findById(idUser);
+        List<Recipe> recipesFromFriends = new ArrayList<>();
 
-        if (user.isPresent())
-        {
-            List<User> friends = new ArrayList<>(user.get().getFriends());
-            List<Recipe> recipes = new ArrayList<>();
+        // Fetch the user based on userId
+        User user = userRepository.findById(idUser).orElse(null);
 
-            for(User friend : friends)
-            {
-                recipes.addAll(friend.getRecipes());
+        if (user != null) {
+            // Get approved friends
+            Set<User> approvedFriends = user.getFriends();
+
+            // Iterate over approved friends and fetch their recipes
+            for (User friend : approvedFriends) {
+                recipesFromFriends.addAll(friend.getRecipes());
             }
+        }
 
-            return ResponseEntity.ok(recipes);
-        }
-        else
-        {
-            return ResponseEntity.notFound().build();
-        }
+
+        return ResponseEntity.ok(recipesFromFriends);
     }
 
     @GetMapping("/getRecipe{id}")
@@ -139,6 +134,7 @@ public class RecipeController {
         }
     }
 
+    @Transactional
     @PutMapping(path = "/updateRecipe")
     public ResponseEntity<Long> recipeUpdate(@RequestBody RecipeDTO recipeDTO) {
 
@@ -156,22 +152,30 @@ public class RecipeController {
             recipe.setImagePath(recipeDTO.getImagePath());
             recipe.setPreparationTime(recipeDTO.getPreparationTime());
             recipe.setTag(recipeDTO.getTag());
-            try {
-                recipe.setCreationDate(recipeDTO.getDate());
-            } catch (ParseException e) {
-                recipe.setCreationDate(new Date());
-            }
 
-            // Convert ingredients and steps from DTO to Ingredient and Step objects
+            // Delete existing steps and ingredients
+            recipeRepository.deleteStepsByRecipeId(recipe.getId_recipe());
+            recipeRepository.deleteIngredientsByRecipeId(recipe.getId_recipe());
+
+            // Convert ingredients from DTO to Ingredient entities and associate them with the recipe
             List<Ingredient> ingredients = recipeDTO.getIngredients().stream()
-                    .map(Ingredient::new)
-                    .toList();
-            recipe.setIngredients(new HashSet<>(ingredients));
+                    .map(ingredientName -> {
+                        Ingredient ingredient = new Ingredient(ingredientName);
+                        ingredient.setRecipe(recipe);
+                        return ingredient;
+                    })
+                    .collect(Collectors.toList());
+            recipe.setIngredients(ingredients);
 
+            // Convert steps from DTO to Step entities and associate them with the recipe
             List<Step> steps = recipeDTO.getSteps().stream()
-                    .map(Step::new)
-                    .toList();
-            recipe.setSteps(new HashSet<>(steps));
+                    .map(stepDescription -> {
+                        Step step = new Step(stepDescription);
+                        step.setRecipe(recipe);
+                        return step;
+                    })
+                    .collect(Collectors.toList());
+            recipe.setSteps(steps);
 
             return ResponseEntity.ok(recipeRepository.save(recipe).getId_recipe());
         }
